external-projects/sui-prover/crates/sui-prover/tests/snapshots/skip-focus.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 141
expression: output
---
exiting with model building errors
error: invalid attribute
  ┌─ tests/inputs/skip-focus.fail.move:9:3
  │
9 │ #[spec(prove, skip, focus)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot use both 'focus' and 'skip' parameters in spec
